# three-python-library

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt  three-python-library.code-workspace
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: CD.yml  CI.yml  documentation.yml  static_pages.yml
Proto/Settings/: Camera.proto  Turntable.proto
doc/source/: conf.py  index.rst  three.MF.V3.Settings.rst  three.MF.V3.Tasks.rst  three.MF.V3.rst  three.rst  three.scanner.rst
docs/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  search.js  searchindex.js  three.MF.V3.Descriptors.Settings.html  three.MF.V3.Descriptors.html  three.MF.V3.Settings.html  three.MF.V3.Tasks.html  three.MF.V3.html  three.MF.html  three.html
docs/.doctrees/: environment.pickle  index.doctree  modules.doctree  three.MF.V3.Descriptors.Settings.doctree  three.MF.V3.Descriptors.doctree  three.MF.V3.Settings.doctree  three.MF.V3.Tasks.doctree  three.MF.V3.doctree  three.MF.doctree  three.doctree
docs/_sources/: index.rst.txt  three.rst.txt
docs/doctrees/: environment.pickle  index.doctree
docs/html/: .buildinfo  genindex.html  index.html  search.html  searchindex.js
docs/three/: MF.html  _scanner.html  scanner.html  serialization.html
examples/: 00_connection.py  01_simpleScanner.py  01_turntable.py  02_projector.py  02_simpleScanner.py  03_task.py  04_simpleScanner.py  client.py
maf_three/: V3Task.py  __init__.py  buffer.py  json.py  scanner.py  scanner.pyi  scanner_functions.py  serialization.py  setup.py  task.py
maf_three/Settings/: projector.py  scan.py  turntable.py
maf_three/descriptors/: project.py  videoFrame.py
maf_three/examples/: 00_connection.py  03_task.py  04_simpleScanner.py  __main__.py  connection.py  projector.py  simpleScanner.py  task.py  turntable.py  turntableCalibration.py
maf_three/settings/: capture.py  projector.py  scan.py  turntable.py
maf_three/settings_manual/: projector.py  scan.py
maf_three/tests/: test_proto_camera.py  test_proto_turntable.py
scripts/: build-deploy-package  build-doc.py  build-package  build-proto  build-proto-doc.py  build-proto.py  build_doc.py  build_proto.py  checkFiles.py  generatePyi.py  generateScannerPy.py  github-tag  incrementVersion.sh  install-dependencies  interpretProto.py  package-build  package-deploy  start-virtual-env  transpileProto.py  tree.py
source/: conf.py  three.MF.V3.Descriptors.Settings.rst
three/: MANIFEST.in  __init__.py  requirements.txt  scanner.py  scanner.pyi  setup.py
three-api/: client.py
three-api/examples/: client.py
three-api/src/: scanner.py  task.py
three/docs/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  search.html  searchindex.js  three.MF.V3.Descriptors.Settings.html  three.MF.V3.Descriptors.html  three.MF.V3.Settings.html  three.MF.V3.Tasks.html  three.MF.V3.html  three.MF.html  three.html
three/examples/: __main__.py  simpleScanner.py  turntableCalibration.py
three/source/: conf.py  modules.rst  (+2 more)
three_api/: descriptors.py  scanner.py  task.py
(+228 files in other folders)
