
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


# Package info and dependencies
[project]
name = "maf_three"
description = "Matter and Form - THREE - Library"
dynamic = ["version"]
classifiers = ["Programming Language :: Python :: 3"]
requires-python = ">=3.10"
dependencies = [
    'importlib-metadata; python_version<"3.10"',
    'protobuf >= 3.12.4',
    'websocket-client >= 1.7.0',
    'grpcio-tools',
    'numpy'
]

# URLs
[project.urls]
Homepage = "https://matterandform.net"
Documentation = "https://matterandform.net"

# Package source
[tool.setuptools.packages.find]
include = ["maf_three*"]

# Dynamic input
[tool.setuptools.dynamic]
version = {attr = "maf_three.__version__"}

# Command line accessible scripts
# Usage :
#    python3 -m maf_three.examples connection
#    python3 -m maf_three.examples projector
#    python3 -m maf_three.examples simpleScanner
[project.scripts]
examples = "maf_three.examples:main_cli"