
# Package build
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# Package info and dependencies
[project]
name = "maf_three"
description = "Matter and Form - THREE - Library"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"]
requires-python = ">=3.10"
dependencies = [
    'importlib-metadata; python_version<"3.10"',
    'protobuf >= 5.0.0',
    'websocket-client >= 1.7.0',
    'numpy >= 1.26.4'
]

# URLs
[project.urls]
Homepage = "https://matterandform.net"
Documentation = "https://github.com/Matter-and-Form/three-python-library/wiki"

# Package source
[tool.setuptools.package-dir]
maf_three = "maf_three"
"MF" = "maf_three/MF"

# Dynamic input
[tool.setuptools.dynamic]
version = {attr = "maf_three.__version__"}

# Command line accessible scripts
# Usage:
#    python3 -m maf_three.examples connection
#    python3 -m maf_three.examples projector
#    python3 -m maf_three.examples simpleScanner
[project.scripts]
examples = "maf_three.examples:main_cli"